--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
-<link rel="stylesheet" href="/project/sitefull.css">
+<link rel="stylesheet" href="sitefull.css">
 
 <div class="first_part">
   <div class="top_img">
