--- a/project/index.html
+++ b/project/index.html
@@ -1,9 +1,3 @@
-<html>
-<head>
-<meta charset="utf-8">
-<title>Кириллова Ирина</title>
-<link rel="stylesheet" href="sitefull.css">
-
 <div class="first_part">
   <div class="top_img">
       <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/logo.gif" alt="Logo">
@@ -42,27 +36,27 @@
      <a href="#" class="more">- more details -</a>
      </div>
      </div>
-
+  
      <div class="title_middle"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet2.gif" alt="" /></span>New products</div>
       <div class="new_prod">
-
+     
      <div class="new_part_with_prod">
          <div class="new_prod_part"> <a href="#">product name</a>
           <div class="new_prod_part-img"> <span class="new_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/new_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb1.gif" alt="" class="product" border="0" /></a> </div>
-        </div>
+        </div> 
        </div>
            <div class="new_part_with_prod">
      <div class="new_prod_part"> <a href="#">product name</a>
           <div class="new_prod_part-img"> <span class="new_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/new_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb2.gif" alt="" class="product" border="0" /></a> </div>
-        </div>
+        </div>  
        </div>
           <div class="new_part_with_prod">
      <div class="new_prod_part"> <a href="#">product name</a>
           <div class="new_prod_part-img"> <span class="new_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/new_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb3.gif" alt="" class="product" border="0" /></a> </div>
-        </div>
+        </div>  
      </div>
      </div>
-
+   
  </div>
 
 
@@ -70,21 +64,21 @@
       <div class="language"> <span>Languages:</span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/gb.gif" alt="" /></a> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/fr.gif" alt="" /></a> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/de.gif" alt=""/></a>
        </div>
   <div class="currency"> <span >Currency: </span> <a href="#">GBP</a> <a href="#">EUR</a> <a href="#" >USD</a> </div>
-
+  <br>
      <div class="cart">
         <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/cart.gif" alt="" /></span>My cart</div>
         <div class="cart_content"> 3 x items | <span >TOTAL: 100$</span> </div>
         <a href="#" class="view_cart">view cart</a> </div>
-
+ 
   <div class="about">
       <div class="bottom-part_right"></div>
-
+  
  <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet3.gif" alt="" /></span>About Our Shop</div>
-
+      
         <p> <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/about.gif" alt="" class="right" /> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
       </div>
    <div class="bottom-part_right"></div>
-
+  <div class="right-part-box">
          <div class="Promotions">
         <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet4.gif" alt="" /></span>Promotions</div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
@@ -97,8 +91,8 @@
           <div class="new_prod_part-img"> <span class="new_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
         </div>
       </div>
-
-        <div class="right_box">
+ </div>
+        <div class="right-part-box">
         <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet5.gif" alt="" /></span>Categories</div>
         <ul class="list">
           <li><a href="#">accesories</a></li>
@@ -127,7 +121,7 @@
         </ul>
       </div>
     </div>
-
+ 
  </div>
 </div>
 
@@ -141,6 +135,3 @@
    <div class="menu-footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a> </div>
 </div>
 
-
-</body>
-</html>
