--- a/project/index.html
+++ b/project/index.html
@@ -132,6 +132,23 @@
       <a href="#" alt="Logo" border="0" />Текст</a>
   </div>
 
-   <div class="menu-footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a> </div>
+   <div class="menu-footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a>
+     <br>
+
+<div class="footer-social">
+                <a class="facebook" href="#"><span class="fa fa-facebook"></span></a>
+  <a href="http://facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
+                <a class="youtube" href="#"><span class="fa fa-youtube"></span></a>
+                <a class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
+                <a class="instagram" href="#"><span class="fa fa-instagram"></span></a>
+              </div>
+ 
 </div>
+
+</div>
+
+  <!-- Bootstrap -->
+
+ <script src="assets/js/bootstrap.js"></script>
+
 
