--- a/project/index.html
+++ b/project/index.html
@@ -1,3 +1,7 @@
+<head>
+<meta charset="utf-8">
+<title>Кириллова Ирина</title>
+<link rel="stylesheet" href="sitefull.css">
 <div class="first_part">
   <div class="top_img">
       <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/logo.gif" alt="Logo">
@@ -151,4 +155,5 @@
 
  <script src="assets/js/bootstrap.js"></script>
 
-
+</body>
+</html>
