--- a/project/index.html
+++ b/project/index.html
@@ -140,11 +140,10 @@
      <br>
 
 <div class="footer-social">
-                <a class="facebook" href="#"><span class="fa fa-facebook"></span></a>
-  <a href="http://facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a class="youtube" href="#"><span class="fa fa-youtube"></span></a>
-                <a class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
-                <a class="instagram" href="#"><span class="fa fa-instagram"></span></a>
+                <a href="http://facebook.com/" class="facebook" href="#"><span class="fa fa-facebook"></span></a>
+                  <a  href="http://youtube.com.ua/" class="youtube" href="#"><span class="fa fa-youtube"></span></a>
+                <a href="https://www.linkedin.com/" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
+                <a href="https://www.instagram.com/?hl=ru" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
               </div>
  
 </div>
