--- a/project/index.html
+++ b/project/index.html
@@ -140,10 +140,10 @@
      <br>
 
 <div class="footer-social">
-                <a href="http://facebook.com/" class="facebook" href="#"><span class="fa fa-facebook"></span></a>
-                  <a  href="http://youtube.com.ua/" class="youtube" href="#"><span class="fa fa-youtube"></span></a>
-                <a href="https://www.linkedin.com/" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
-                <a href="https://www.instagram.com/?hl=ru" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
+                <a href="http://facebook.com/" target="_blank" class="facebook" href="#"><span class="fa fa-facebook"></span></a>
+                  <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube"></span></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
+                <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
               </div>
  
 </div>
