--- a/project/index.html
+++ b/project/index.html
@@ -154,7 +154,7 @@
 
   <!-- Bootstrap -->
 
- <script src="assets/js/bootstrap.js"></script>
+ <script src="bootstrap.js"></script>
 
 </body>
 </html>
