--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,9 @@
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
 <link rel="stylesheet" href="sitefull.css">
-<div class="first_part">
+
+  
+  <div class="first_part">
   <div class="top_img">
       <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/logo.gif" alt="Logo">
     </div>
@@ -154,7 +156,10 @@
 
   <!-- Bootstrap -->
 
- <script src="bootstrap.js"></script>
+ <script src="/bootstrap.js"></script>
 
+
+
+  
 </body>
 </html>
