--- a/project/index.html
+++ b/project/index.html
@@ -1,10 +1,12 @@
-<head>
+<html>
+  <head>
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
 <link rel="stylesheet" href="sitefull.css">
-
-  
-  <div class="first_part">
+ </head>
+ <body>
+      
+ <div class="first_part">
   <div class="top_img">
       <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/logo.gif" alt="Logo">
     </div>
@@ -26,7 +28,7 @@
  <div class="left_middle-part">
    <div class="title_middle"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>
    <div class="prod">
-   <img class="prod_img" src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/prod1.gif" alt="Photo">
+   <img class="prod_img" src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/prod1.gif" alt="">
    <div class="part_with_prod">
    <div class="prod_title_middle">Product name</div>
    <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
@@ -156,7 +158,8 @@
 
   <!-- Bootstrap -->
 
- <script src="bootstrap.js"></script>
+ <script src="/bootstrap.js"></script>
+
 
 
 
