--- a/project/index.html
+++ b/project/index.html
@@ -159,7 +159,7 @@
   <!-- Bootstrap -->
 
  <script src="bootstrap.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 
 
