--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,10 @@
   <head>
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
-<link rel="stylesheet" href="sitefull.css">
+<!--<link rel="stylesheet" href="sitefull.css">-->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+ 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
  </head>
  <body>
       
