--- a/project/index.html
+++ b/project/index.html
@@ -65,29 +65,21 @@
      </div>
      </div>
   </div>
-
-<div class="right_middle-part">
+ <div class="right_middle-part">
       <div class="language"> <span>Languages:</span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/gb.gif" alt="" /></a> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/fr.gif" alt="" /></a> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/de.gif" alt=""/></a>
        </div>
   <div class="currency"> <span >Currency: </span> <a href="#">GBP</a> <a href="#">EUR</a> <a href="#" >USD</a> </div>
-  <br>
-     <div class="cart">
+      <div class="cart">
         <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/cart.gif" alt="" /></span>My cart</div>
         <div class="cart_content"> 3 x items | <span >TOTAL: 100$</span> </div>
         <a href="#" class="view_cart">view cart</a> </div>
- 
-  <div class="about">
+   <div class="about">
       <div class="bottom-part_right"></div>
-  
- <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet3.gif" alt="" /></span>About Our Shop</div>
-      
-        <p> <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/about.gif" alt="" class="right" /> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
-     <div class="bottom-part_right"></div>
+  <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet3.gif" alt="" /></span>About Our Shop</div>
+         <p> <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/about.gif" alt="" class="right" /> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
       </div>
-  
-  
-  <div class="right-part-box">
-         <div class="Promotions">
+   <div class="bottom-part_right"></div>
+          <div class="Promotions">
         <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet4.gif" alt="" /></span>Promotions</div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
           <div class="new_prod_part-img"> <span class="new_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
@@ -99,8 +91,7 @@
           <div class="new_prod_part-img"> <span class="new_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/promo_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
         </div>
       </div>
- </div>
-        <div class="right-part-box">
+         <div class="right_box">
         <div class="title"><span class="title_icon"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet5.gif" alt="" /></span>Categories</div>
         <ul class="list">
           <li><a href="#">accesories</a></li>
@@ -130,33 +121,16 @@
       </div>
     </div>
   </div>
-
 </div>
-
-<div class="footer">
+ <div class="footer">
 <div class="footer_left">
       <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/footer_logo.gif" alt="Logo">
 <br/>
       <a href="#" alt="Logo" border="0" />Текст</a>
   </div>
-
-   <div class="menu-footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a>
-     <br>
-
-<div class="footer-social">
-     <a target="_blank" class="facebook" href="http://www.facebook.com" rel="nofollow noopener"><i class="fa fa-facebook"></i></a>
-                  <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube" ></span></a>
-                <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
-                <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
-              </div>
- 
+    <div class="menu-footer"> <a href="#">home</a> <a href="#">about us</a> <a href="#">services</a> <a href="#">privacy policy</a> <a href="#">contact us</a> </div>
 </div>
 
-</div>
-
-  <!-- Bootstrap -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
- <script src="bootstrap.js"></script>
 
 
 
