--- a/project/index.html
+++ b/project/index.html
@@ -35,7 +35,7 @@
 
      <!--<img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>-->
    <div class="prod">
-   <img class="prod_img" src="pic/prod1.gif" alt="">
+   <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
    <div class="part_with_prod">
    <div class="prod_title_middle">Product name</div>
    <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
@@ -44,7 +44,7 @@
      </div>
    <div class="bottom-part"></div>
     <div class="prod">
-   <img class="prod_img" src="pic/prod2.gif" alt="">
+   <img class="prod_img" src="pic/prod2.gif" alt="Photo2">
    <div class="part_with_prod">
    <div class="prod_title_middle">Product name</div>
    <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
