--- a/project/index.html
+++ b/project/index.html
@@ -57,12 +57,12 @@
      
      <div class="new_part_with_prod">
          <div class="new_prod_part"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb1.gif" alt="" class="product" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
         </div> 
        </div>
            <div class="new_part_with_prod">
      <div class="new_prod_part"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="" /></span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/thumb2.gif" alt="" class="product" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
         </div>  
        </div>
           <div class="new_part_with_prod">
@@ -76,7 +76,7 @@
  </div>
 
 <div class="right_middle-part">
-      <div class="language"> <span>Languages:</span> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/gb.gif" alt="" /></a> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/fr.gif" alt="" /></a> <a href="#"><img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/de.gif" alt=""/></a>
+      <div class="language"> <span>Languages:</span> <a href="#"><img src="pic/gb.gif" alt="" /></a> <a href="#"><img src="pic/fr.gif" alt="" /></a> <a href="#"><img src="pic/de.gif" alt=""/></a>
        </div>
   <div class="currency"> <span >Currency: </span> <a href="#">GBP</a> <a href="#">EUR</a> <a href="#" >USD</a> </div>
   <br>
