--- a/project/index.html
+++ b/project/index.html
@@ -163,9 +163,9 @@
 
 </div>
 
-  <!-- Bootstrap -->
+  <!-- Bootstrap 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
- <script src="bootstrap.js"></script>
+ <script src="bootstrap.js"></script>-->
 
 
 
