--- a/project/index.html
+++ b/project/index.html
@@ -3,9 +3,10 @@
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
 <link rel="stylesheet" href="sitefull.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+ <!--   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
  		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+ -->
  </head>
  <body>
 
@@ -163,9 +164,9 @@
 
 </div>
 
-  <!-- Bootstrap 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
- <script src="bootstrap.js"></script>-->
+  <!-- Bootstrap -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
+  <script type="text/javascript" src="/bootstrap.js"></script>
 
 
 
