--- a/project/index.html
+++ b/project/index.html
@@ -155,7 +155,7 @@
      
   <!-- Bootstrap -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-  <script type="text/javascript" src="/bootstrap.js"></script>
+  <script type="text/javascript" src="bootstrap.js"></script>
      
 <div class="footer-social">
      <a target="_blank" rel="nofollow noopener" class="facebook" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
