--- a/project/index.html
+++ b/project/index.html
@@ -156,7 +156,8 @@
   <!-- Bootstrap -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
   <script type="text/javascript" src="js/bootstrap.js"></script>
- 
+ <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
+     <script type="text/javascript" src="js/wow.js"></script>
      
 <div class="footer-social">
      <a target="_blank" rel="nofollow noopener" class="facebook" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
