--- a/project/index.html
+++ b/project/index.html
@@ -171,7 +171,23 @@
 </div>
 
 
-
+  <!-- initialize jQuery Library --> 
+  <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>--> 
+<script type="text/javascript" src="js/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <!-- Bootstrap -->
+  <script src="js/bootstrap.js"></script>
+  <!-- Slick Slider
+  <script type="text/javascript" src="js/slick.js"></script>
+ Counter 
+  <script type="text/javascript" src="js/waypoints.js"></script>
+  <script type="text/javascript" src="js/jquery.counterup.js"></script>
+mixit slider
+  <script type="text/javascript" src="js/jquery.mixitup.js"></script>
+  Add fancyBox 
+  <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
+ Wow animation
+  <script type="text/javascript" src="js/wow.js"></script>  -->
 
 
   
