--- a/project/index.html
+++ b/project/index.html
@@ -160,7 +160,7 @@
      <script type="text/javascript" src="js/wow.js"></script>-->
      
 <div class="footer-social">
-     <a target="_blank" rel="nofollow noopener" class="facebook" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
+     <a target="_blank" rel="nofollow noopener" class="facebook" href="http://www.facebook.com"><span class="fa fa-facebook"></span></a>
                   <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube" ></span></a>
                 <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
                 <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
