--- a/project/index.html
+++ b/project/index.html
@@ -160,7 +160,7 @@
      <script type="text/javascript" src="js/wow.js"></script>-->
      
 <div class="footer-social">
-     <a target="_blank" rel="nofollow noopener" class="facebook" href="http://www.facebook.com"><span class="fa fa-facebook"></span></a>
+     <a target="_blank" class="facebook" href="http://www.facebook.com"><span class="fa fa-facebook"></span></a>
                   <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube" ></span></a>
                 <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
                 <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
@@ -172,22 +172,10 @@
 
 
   <!-- initialize jQuery Library --> 
-  <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>--> 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <!-- Bootstrap -->
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+   <!-- Bootstrap -->
   <script src="js/bootstrap.js"></script>
-  <!-- Slick Slider
-  <script type="text/javascript" src="js/slick.js"></script>
- Counter 
-  <script type="text/javascript" src="js/waypoints.js"></script>
-  <script type="text/javascript" src="js/jquery.counterup.js"></script>
-mixit slider
-  <script type="text/javascript" src="js/jquery.mixitup.js"></script>
-  Add fancyBox 
-  <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
- Wow animation
-  <script type="text/javascript" src="js/wow.js"></script>  -->
+  
 
 
   
