--- a/project/index.html
+++ b/project/index.html
@@ -175,6 +175,7 @@
   <script type="text/javascript" src="js/jquery.min.js"></script>
    <!-- Bootstrap -->
   <script src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="js/font-awesome.min.js"></script>
   
 
 
