--- a/project/index.html
+++ b/project/index.html
@@ -160,10 +160,10 @@
      <script type="text/javascript" src="js/wow.js"></script>-->
      
 <div class="footer-social">
-     <a target="_blank" class="facebook" href="http://www.facebook.com"><span class="fa fa-facebook"></span></a>
-                  <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube" ></span></a>
-                <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
-                <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
+     <a target="_blank" class="facebook" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
+                  <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><i class="fa fa-youtube" ></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><i class="fa fa-instagram"></i></a>
               </div>
  
 </div>
