--- a/project/index.html
+++ b/project/index.html
@@ -3,10 +3,10 @@
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
 <link rel="stylesheet" href="sitefull.css">
- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+ <!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
  		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-
+-->
  </head>
  <body>
 
@@ -154,10 +154,10 @@
      <br>
      
   <!-- Bootstrap -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
  <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
-     <script type="text/javascript" src="js/wow.js"></script>-->
+     <script type="text/javascript" src="js/wow.js"></script>
      
 <div class="footer-social">
      <a target="_blank" class="facebook" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
