--- a/project/index.html
+++ b/project/index.html
@@ -154,10 +154,10 @@
      <br>
      
   <!-- Bootstrap -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+ <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
  <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
-     <script type="text/javascript" src="js/wow.js"></script>
+     <script type="text/javascript" src="js/wow.js"></script>-->
      
 <div class="footer-social">
      <a target="_blank" class="facebook" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
