--- a/project/index.html
+++ b/project/index.html
@@ -175,9 +175,9 @@
 
 
   <!-- initialize jQuery Library --> 
-  <script type="text/javascript" src="js/jquery.min.js"></script>
+<!--  <script type="text/javascript" src="js/jquery.min.js"></script>-->
    <!-- Bootstrap -->
-  <script src="js/bootstrap.js"></script>
+ <!-- <script src="js/bootstrap.js"></script>-->
 <!--  <script type="text/javascript" src="font-awesome.min.css"></script>-->
   
 
