--- a/project/index.html
+++ b/project/index.html
@@ -2,9 +2,8 @@
   <head>
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
-<link rel="stylesheet" href="sitefull.css">
- <link rel="stylesheet" type="text/css" href="font-awesome.min">
-    
+  <link rel="stylesheet" href="sitefull.css">
+  <link href='font-awesome.css' rel='stylesheet' type='text/css'>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
  </head>
  <body>
