--- a/project/index.html
+++ b/project/index.html
@@ -3,8 +3,8 @@
 <meta charset="utf-8">
 <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
-  <link href='font-awesome.css' rel='stylesheet' type='text/css'>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+     <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  </head>
  <body>
 
@@ -152,14 +152,13 @@
      <br>
      
      
-<div class="footer-social">
-     <a target="_blank" class="facebook" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a>
-                  <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><i class="fa fa-youtube" ></i></a>
-                <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><i class="fa fa-instagram"></i></a>
-              </div>
- 
-</div>
+  <div class="footer-social">
+     <a target="_blank" class="facebook" href="http://www.facebook.com"><span class="fa fa-instagram"></span></a>
+                  <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube" ></span></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
+                <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
+  </div>
+ </div>
 
 </div>
 
