--- a/project/index.html
+++ b/project/index.html
@@ -153,7 +153,7 @@
      
      
   <div class="footer-social">
-     <a target="_blank" class="facebook" href="http://www.facebook.com"><span class="fa fa-instagram"></span></a>
+     <a target="_blank" class="facebook" href="http://www.facebook.com"><span class="fa fa-facebook"></span></a>
                   <a  href="http://youtube.com.ua/" target="_blank" class="youtube" href="#"><span class="fa fa-youtube" ></span></a>
                 <a href="https://www.linkedin.com/" target="_blank" class="linkedin" href="#"><span class="fa fa-linkedin"></span></a>
                 <a href="https://www.instagram.com/?hl=ru" target="_blank" class="instagram" href="#"><span class="fa fa-instagram"></span></a>
