--- a/project/index.html
+++ b/project/index.html
@@ -5,9 +5,14 @@
   <link rel="stylesheet" href="sitefull.css">
      <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
  </head>
- <body>
 
+ <body>
+   
+<div id="popup-container">
+  <div id="popup"></div>
+</div>
 
 <div class="first_part">
   <div class="top_img">
