--- a/project/index.html
+++ b/project/index.html
@@ -23,7 +23,7 @@
    <div class="menu">
       <ul>
         <li><a href="#">home</a></li>
-        <li><a href="a.html">about us</a></li>
+        <li><a href="about_us.html">about us</a></li>
         <li><a href="c.html">flowers</a></li>
         <li><a href="s.html">specials gifts</a></li>
         <li><a href="m.html">my accout</a></li>
