--- a/project/index.html
+++ b/project/index.html
@@ -22,7 +22,7 @@
     </div>
    <div class="menu">
       <ul>
-        <li><a href="#">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="about_us.html">about us</a></li>
         <li><a href="c.html">flowers</a></li>
         <li><a href="s.html">specials gifts</a></li>
