--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,9 @@
  <body>
    
 <div id="popup-container">
-  <div id="popup"></div>
+  <div id="popup">
+   <button id="order_cart">Купить</button>
+  </div>
 </div>
 
 <div class="first_part">
