--- a/project/index.html
+++ b/project/index.html
@@ -95,7 +95,7 @@
   <div class="about">
       <div class="bottom-part_right"></div>
   
- <div class="title"><span class="title_icon"><img src="pic/bullet3.gif" alt="" /></span>About Our Shop</div>
+ <div class="title"><span class="title_icon"><img src="pic/bullet3.gif" alt="" /></span><a href="about_us.html">About Our Shop</a></div>
       
         <p> <img src="pic/about.gif" alt="" class="right" /> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
      <div class="bottom-part_right"></div>
