--- a/project/about_us.html
+++ b/project/about_us.html
@@ -23,7 +23,7 @@
     </div>
    <div class="menu">
       <ul>
-        <li><a href="#">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="a.html">about us</a></li>
         <li><a href="c.html">flowers</a></li>
         <li><a href="s.html">specials gifts</a></li>
