--- a/project/index.html
+++ b/project/index.html
@@ -6,11 +6,13 @@
      <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-     <script type="text/javascript" src="project.js"</script>
+
+    
  </head>
 
  <body>
-   
+        <script type="text/javascript" src="project.js"></script>
+        <script type="text/javascript" src="project2.js"></script>
 <div id="popup-container">
   <div id="popup">
    <button id="order_cart">Купить</button>
