--- a/project/index.html
+++ b/project/index.html
@@ -28,7 +28,7 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="about_us.html">about us</a></li>
-        <li><a href="myaccaunt">flowers</a></li>
+        <li><a href="myaccaunt.html">flowers</a></li>
         <li><a href="s.html">specials gifts</a></li>
         <li><a href="m.html">my accout</a></li>
         <li><a href="r.html">register</a></li>
