--- a/project/myaccaunt.html
+++ b/project/myaccaunt.html
@@ -30,7 +30,7 @@
         <li><a href="about_us.html">about us</a></li>
         <li><a href="c.html">flowers</a></li>
         <li><a href="s.html">specials gifts</a></li>
-        <li><a href="m.html">my accout</a></li>
+        <li><a href="myaccaunt.html">my accout</a></li>
         <li><a href="r.html">register</a></li>
         <li><a href="d.html">prices</a></li>
         <li><a href="c.html">contact</a></li>
