--- a/project/index.html
+++ b/project/index.html
@@ -11,8 +11,7 @@
  </head>
 
  <body>
-        <script type="text/javascript" src="project.js"></script>
-        
+  
   <div id="popup-container">
   <div id="popup">
    <button id="order_cart">Купить</button>
@@ -173,7 +172,8 @@
 </div>
 
 
-
+      <script defer type="text/javascript" src="project.js"></script>
+        
 
   
 </body>
