--- a/project/about_us.html
+++ b/project/about_us.html
@@ -11,8 +11,7 @@
  </head>
 
  <body>
-        <script type="text/javascript" src="project.js"></script>
-        
+            
   <div id="popup-container">
   <div id="popup">
    <button id="order_cart">Купить</button>
@@ -142,7 +141,7 @@
 </div>
 
 
-
+<script defer type="text/javascript" src="project.js"></script>
 
   
 </body>
