--- a/project/myaccaunt.html
+++ b/project/myaccaunt.html
@@ -11,8 +11,7 @@
  </head>
 
  <body>
-        <script type="text/javascript" src="project.js"></script>
-        
+          
   <div id="popup-container">
   <div id="popup">
    <button id="order_cart">Купить</button>
@@ -158,7 +157,7 @@
 </div>
 
 
-
+<script defer type="text/javascript" src="project.js"></script>
 
   
 </body>
