--- a/project/index.html
+++ b/project/index.html
@@ -97,11 +97,11 @@
       <div class="bottom-part_right"></div>
   
  <div class="title"><span class="title_icon"><img src="pic/bullet3.gif" alt="" /></span><a href="about_us.html">About Our Shop</a></div>
-      
-        <p> <img src="pic/about.gif" alt="" class="right" /> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+      <div class="about_box_right"> <img src="pic/about.gif" alt="" class="right" /> 
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
      <div class="bottom-part_right"></div>
       </div>
-  
+   </div>
   
   <div class="right-part-box">
          <div class="Promotions">
