--- a/project/index.html
+++ b/project/index.html
@@ -30,9 +30,9 @@
         <li><a href="m.html">flowers</a></li>
         <li><a href="s.html">specials gifts</a></li>
         <li><a href="myaccaunt.html">my accout</a></li>
-        <li><a href="r.html">register</a></li>
+        <li><a href="register.html">register</a></li>
         <li><a href="d.html">prices</a></li>
-        <li><a href="c.html">contact</a></li>
+        <li><a href="contact.html">contact</a></li>
       </ul>
     </div>
 </div>
