--- a/project/register.html
+++ b/project/register.html
@@ -76,7 +76,7 @@
             <div class="form_row">
               <div class="terms">
                 <input type="checkbox" name="terms" />
-                I agree to the <a href="#">terms &amp; conditions</a> </div>
+                I agree to the <a class="checkbox_terms" href="#">terms &amp; conditions</a> </div>
             </div>
             <div class="form_row">
               <input type="submit" class="register" value="register" />
