--- a/project/index.html
+++ b/project/index.html
@@ -27,11 +27,11 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="about_us.html">about us</a></li>
-        <li><a href="m.html">flowers</a></li>
-        <li><a href="s.html">specials gifts</a></li>
+        <li><a href="flowers.html">flowers</a></li>
+        <li><a href="specials_gifts.html">specials gifts</a></li>
         <li><a href="myaccaunt.html">my accout</a></li>
         <li><a href="register.html">register</a></li>
-        <li><a href="d.html">prices</a></li>
+        <li><a href="prices.html">prices</a></li>
         <li><a href="contact.html">contact</a></li>
       </ul>
     </div>
