--- a/project/contact.html
+++ b/project/contact.html
@@ -40,9 +40,39 @@
 
 <div class="middle_part">
  <div class="left_middle-part">
-  
-     
+  <div class="title_middle"><span class="title_icon"><img src="pic/bullet1.gif" alt="" /></span>Contact Us</div>
+    <div id="div_about">
+      <p id="p_about"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. 
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.   
+      </p>
+     </div>
+     <div class="contact_form">
+          <div class="form_subtitle">all fields are requierd</div>
+          <div class="form_row">
+            <label class="contact"><strong>Name:</strong></label>
+            <input type="text" class="contact_input" />
+          </div>
+          <div class="form_row">
+            <label class="contact"><strong>Email:</strong></label>
+            <input type="text" class="contact_input" />
+          </div>
+          <div class="form_row">
+            <label class="contact"><strong>Phone:</strong></label>
+            <input type="text" class="contact_input" />
+          </div>
+          <div class="form_row">
+            <label class="contact"><strong>Company:</strong></label>
+            <input type="text" class="contact_input" />
+          </div>
+          <div class="form_row">
+            <label class="contact"><strong>Message:</strong></label>
+            <textarea class="contact_textarea" ></textarea>
+          </div>
+          <div class="form_row"> <a href="#" class="contact">send</a> </div>
+        </div>
+      
  </div>
+
 
 <div class="right_middle-part">
       <div class="language"> <span>Languages:</span> <a href="#"><img src="pic/gb.gif" alt="" /></a> <a href="#"><img src="pic/fr.gif" alt="" /></a> <a href="#"><img src="pic/de.gif" alt=""/></a>
