--- a/project/about_us.html
+++ b/project/about_us.html
@@ -26,7 +26,7 @@
    <div class="menu">
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="about_us.html">about us</a></li>
+        <li class="selected"><a href="about_us.html">about us</a></li>
         <li><a href="flowers.html">flowers</a></li>
         <li><a href="specials_gifts.html">specials gifts</a></li>
         <li><a href="myaccaunt.html">my accout</a></li>
