--- a/project/contact.html
+++ b/project/contact.html
@@ -33,7 +33,7 @@
         <li><a href="myaccaunt.html">my accout</a></li>
         <li><a href="register.html">register</a></li>
         <li><a href="prices.html">prices</a></li>
-        <li><a href="contact.html">contact</a></li>
+        <li class="selected"><a href="contact.html">contact</a></li>
       </ul>
     </div>
 </div>
