--- a/project/flowers.html
+++ b/project/flowers.html
@@ -27,7 +27,7 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="about_us.html">about us</a></li>
-        <li><a href="flowers.html">flowers</a></li>
+        <li class="selected"><a href="flowers.html">flowers</a></li>
         <li><a href="specials_gifts.html">specials gifts</a></li>
         <li><a href="myaccaunt.html">my accout</a></li>
         <li><a href="register.html">register</a></li>
