--- a/project/register.html
+++ b/project/register.html
@@ -31,7 +31,7 @@
         <li><a href="flowers.html">flowers</a></li>
         <li><a href="specials_gifts.html">specials gifts</a></li>
         <li><a href="myaccaunt.html">my accout</a></li>
-        <li><a href="register.html">register</a></li>
+        <li class="selected"><a href="register.html">register</a></li>
         <li><a href="prices.html">prices</a></li>
         <li><a href="contact.html">contact</a></li>
       </ul>
