--- a/project/flowers.html
+++ b/project/flowers.html
@@ -44,20 +44,20 @@
  </div>
 
 <div class="right_middle-part">
-      <div class="language"> <span>Languages:</span> <a href="#"><img src="pic/gb.gif" alt="" /></a> <a href="#"><img src="pic/fr.gif" alt="" /></a> <a href="#"><img src="pic/de.gif" alt=""/></a>
+      <div class="language"> <span>Languages:</span> <a href="#"><img src="pic/gb.gif" alt="Language" /></a> <a href="#"><img src="pic/fr.gif" alt="Language" /></a> <a href="#"><img src="pic/de.gif" alt="Language"/></a>
        </div>
   <div class="currency"> <span >Currency: </span> <a href="#">GBP</a> <a href="#">EUR</a> <a href="#" >USD</a> </div>
   <br>
      <div class="cart">
-        <div class="title"><span class="title_icon"><img src="pic/cart.gif" alt="" /></span>My cart</div>
+        <div class="title"><span class="title_icon"><img src="pic/cart.gif" alt="Cart" /></span>My cart</div>
         <div class="cart_content"> 3 x items | <span >TOTAL: 100$</span> </div>
         <a href="#" class="view_cart">view cart</a> </div>
  
   <div class="about">
       <div class="bottom-part_right"></div>
   
- <div class="title"><span class="title_icon"><img src="pic/bullet3.gif" alt="" /></span><a href="about_us.html">About Our Shop</a></div>
-      <div class="about_box_right"> <img src="pic/about.gif" alt="" class="right" /> 
+ <div class="title"><span class="title_icon"><img src="pic/bullet3.gif" alt="About Shop" /></span><a href="about_us.html">About Our Shop</a></div>
+      <div class="about_box_right"> <img src="pic/about.gif" alt="About" class="right" /> 
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
      
       </div>
@@ -67,20 +67,20 @@
   
   <div class="right-part-box">
          <div class="Promotions">
-        <div class="title"><span class="title_icon"><img src="pic/bullet4.gif" alt="" /></span>Promotions</div>
+        <div class="title"><span class="title_icon"><img src="pic/bullet4.gif" alt="Promotions" /></span>Promotions</div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
         </div>
       </div>
  </div>
         <div class="right-part-box">
-        <div class="title"><span class="title_icon"><img src="pic/bullet5.gif" alt="" /></span>Categories</div>
+        <div class="title"><span class="title_icon"><img src="pic/bullet5.gif" alt="Categories" /></span>Categories</div>
         <ul class="list">
           <li><a href="#">accesories</a></li>
           <li><a href="#">flower gifts</a></li>
@@ -94,7 +94,7 @@
           <li><a href="#">flower gifts</a></li>
           <li><a href="#">specials</a></li>
         </ul>
-        <div class="title"><span class="title_icon"><img src="pic/bullet6.gif" alt="" /></span>Partners</div>
+        <div class="title"><span class="title_icon"><img src="pic/bullet6.gif" alt="Partners" /></span>Partners</div>
         <ul class="list">
           <li><a href="#">accesories</a></li>
           <li><a href="#">flower gifts</a></li>
