--- a/project/flowers.html
+++ b/project/flowers.html
@@ -69,13 +69,13 @@
          <div class="Promotions">
         <div class="title"><span class="title_icon"><img src="pic/bullet4.gif" alt="Promotions" /></span>Promotions</div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
         <div class="new_part_with_prod"> <a href="#">product name</a>
-          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="thumb" border="0" /></a> </div>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/promo_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="product name" class="thumb" border="0" /></a> </div>
         </div>
       </div>
  </div>
