--- a/project/about_us.html
+++ b/project/about_us.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-<meta charset="utf-8">
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"> 
 <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
      <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
