--- a/project/flowers.html
+++ b/project/flowers.html
@@ -1,13 +1,12 @@
 <html>
   <head>
-<meta charset="utf-8">
-<title>Кириллова Ирина</title>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <title>Кириллова Ирина</title>
   <link rel="stylesheet" href="sitefull.css">
-     <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
+  <!--  <link href='font-awesome.css' rel='stylesheet' type='text/css'>-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>   
+ 
  </head>
 
  <body>
