--- a/project/flowers.html
+++ b/project/flowers.html
@@ -38,8 +38,106 @@
 
 <div class="middle_part">
  <div class="left_middle-part">
-  
+    <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Category products</div>
+
+  <div id="all_products">
+     <div class="new_prod">
      
+     <div class="new_part_with_prod">
+         <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
+        </div> 
+       </div>
+           <div class="new_part_with_prod">
+     <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
+        </div>  
+       </div>
+          <div class="new_part_with_prod">
+            <div class="new_prod_part"> <a href="#">product name</a>
+             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif" alt="" class="product" border="0" /></a> </div>
+             </div>  
+            </div>
+            <div class="new_part_with_prod">
+         <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
+        </div> 
+       </div>
+           <div class="new_part_with_prod">
+     <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
+        </div>  
+       </div>
+          <div class="new_part_with_prod">
+            <div class="new_prod_part"> <a href="#">product name</a>
+             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif" alt="" class="product" border="0" /></a> </div>
+             </div>  
+            </div>
+            <div class="new_part_with_prod">
+         <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
+        </div> 
+       </div>
+           <div class="new_part_with_prod">
+     <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
+        </div>  
+       </div>
+          <div class="new_part_with_prod">
+            <div class="new_prod_part"> <a href="#">product name</a>
+             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif" alt="" class="product" border="0" /></a> </div>
+             </div>  
+            </div>
+            <div class="new_part_with_prod">
+         <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb1.gif" alt="" class="product" border="0" /></a> </div>
+        </div> 
+       </div>
+           <div class="new_part_with_prod">
+     <div class="new_prod_part"> <a href="#">product name</a>
+          <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb2.gif" alt="" class="product" border="0" /></a> </div>
+        </div>  
+       </div>
+          <div class="new_part_with_prod">
+            <div class="new_prod_part"> <a href="#">product name</a>
+             <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/new_icon.gif" alt="product name" /></span> <a href="#"><img src="pic/thumb3.gif" alt="" class="product" border="0" /></a> </div>
+             </div>  
+            </div>
+         </div>
+  </div>
+   <section class="pager">
+      <div class="pager__controls">
+            <a class="pager__prev">
+                Previous
+            </a>
+            <ul class="pager__list">
+                <li class="pager__list-item">
+                    <a href="#" class="pager__page">1</a>
+                </li>
+                <li class="pager__list-item">
+                    ...
+                </li>
+                <li class="pager__list-item">
+                    <a href="#" class="pager__page">6</a>
+                </li>
+                <li class="pager__list-item">
+                    <a class="pager__page pager__page--current">7</a>
+                </li>
+                <li class="pager__list-item">
+                    <a href="#" class="pager__page">8</a>
+                </li>
+                <li class="pager__list-item">
+                    ...
+                </li>
+                <li class="pager__list-item">
+                    <a href="#" class="pager__page">15</a>
+                </li>
+            </ul>
+            <a href="#" class="pager__next">
+                Next
+            </a>
+        </div>
+      </section>
  </div>
 
 <div class="right_middle-part">
