--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -44,8 +44,9 @@
  
    <div id="all_products">
     <div class="prod">
+      <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/special_icon.gif" alt="special icon" />
    <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
-  <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/special_icon.gif" alt="special icon" /><div class="part_with_prod">
+  <div class="part_with_prod">
      <div class="new_prod_part-img"> <span class="new_icon"><img src="pic/special_icon.gif" alt="special icon" /><div class="prod_title_middle">Product name</div>
    <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
      <a href="#" class="more">- more details -</a> </div>
