--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -52,6 +52,7 @@
      <a href="#" class="more">- more details -</a> </div>
      </div>
      </div>
+     </div>
      <div class="prod">
    <img class="prod_img" src="pic/prod2.gif" alt="Photo2">
    <div class="part_with_prod">
