--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -43,16 +43,18 @@
      <!--<img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>-->
  
    <div id="all_products">
-    <div class="prod">
-    <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
-      <div class="prod_det_box"> <span class="new_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
+      <div class="prod">
+   <img class="prod_img" src="pic/prod1.gif" alt="Photo1">
+  
       <div class="part_with_prod">
-    <div class="prod_title_middle">Product name</div>
+            <div class="prod_det_box"> <span class="special_icon"><img src="images/special_icon.gif" alt="special_icon" /></span>
+   <div class="prod_title_middle">Product name</div>
    <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-     <a href="#" class="more">- more details -</a> </div>
+     <a href="#" class="more">- more details -</a>
      </div>
      </div>
-     </div>
+      </div>
+     
      <div class="prod">
    <img class="prod_img" src="pic/prod2.gif" alt="Photo2">
    <div class="part_with_prod">
