--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -61,6 +61,15 @@
      <a href="#" class="more">- more details -</a>
     </div>
     </div>
+     
+        <div class="prod">
+   <img class="prod_img" src="pic/prod2.gif" alt="Photo2">
+   <div class="prod_det_box"> <span class="special_icon"><img src="pic/special_icon.gif" alt="special_icon" /></span>
+   <div class="prod_title_middle">Product name</div>
+   <p class="prod_text_middle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+     <a href="#" class="more">- more details -</a>
+    </div>
+    </div>
  
     <div class="prod">
    <img class="prod_img" src="pic/prod2.gif" alt="Photo3">
