--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -89,7 +89,10 @@
    </div>
       </tr>
  <!--</div>-->          
-
+    </tbody>
+</table>
+    
+    
       <section class="pager">
       <div class="pager__controls">
             <a class="pager__prev">
