--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -190,7 +190,7 @@
             <a class="pager__prev">
                 Previous
             </a>
-            <ul class="pager__list">
+<!--            <ul class="pager__list">
                 <li class="pager__list-item">
                     <a href="#" class="pager__page">1</a>
                 </li>
@@ -213,6 +213,7 @@
                     <a href="#" class="pager__page">15</a>
                 </li>
             </ul>
+-->
             <a href="#" class="pager__next">
                 Next
             </a>
