--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -186,6 +186,9 @@
 
     
       <section class="pager">
+       <div class="pager__info">
+       Show 1 to 10 of 150 rows
+       </div>
       <div class="pager__controls">
             <a class="pager__prev">
                 Previous
