--- a/project/specials_gifts.html
+++ b/project/specials_gifts.html
@@ -39,7 +39,7 @@
 
 <div class="middle_part">
   <div class="left_middle-part">
-   <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Featured products</div>
+   <div class="title_middle"><span class="title_icon"> <img src="pic/bullet1.gif" alt="Featured products" /></span>Special gifts</div>
 
      <!--<img src="https://www.free-css.com/assets/files/free-css-templates/preview/page92/flower-shop/images/bullet1.gif" alt="" /></span>Featured products</div>-->
  
